icons added and changes added

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -2,14 +2,13 @@
     <div class="card">
         <div class="d-flex justify-content-between p-3">
             <div class="image">
-                <img src="https://img.icons8.com/external-smashingstocks-flat-smashing-stocks/452/external-online-test-distance-education-smashingstocks-flat-smashing-stocks.png"
+                <img src="https://www.easilearnmusic.co.uk/uploads/1/2/8/2/12829937/quizzes_orig.png"
                     width="100" height="100" alt="logo">
 
             </div>
             <div class="quiz-header">
                 <h4 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><b>Core Java Quiz</b></h4>
                 <span style="font-style: italic;">Welcome {{name}}</span>
-
             </div>
         </div>
 
@@ -73,13 +72,14 @@
                     <div class="col-md-2">
                         <div class="row d-flex justify-content-between">
                             <img class="img-fluid col-sm-12 mx-auto"
-                                src="https://img.icons8.com/external-wanicon-flat-wanicon/452/external-badge-award-and-success-wanicon-flat-wanicon.png"
+                                src="https://th.bing.com/th/id/OIP.wlOtwDspadtf5hecgvN3IAHaHa?pid=ImgDet&rs=1"
                                 width="70" height="70" alt="">
                         </div>
                     </div>
                     <div class="col-md-10">
                         <div class="result text-justify col-md-6 col-sm-12">
-                            <p style="color: rgb(0, 191, 255);"><b>Congratulations {{name}} You have completed the Quiz: <br><br><p style="color:darkslateblue">Your ScoreCard is shown below: </p></b></p>
+                            <h4 style="color: rgb(0, 191, 255);"><b>Congratulations {{name}} You have completed the Quiz: <br><br></b></h4>
+                            <h5 style="color:darkslateblue"><b>Your ScoreCard is shown below: </b></h5>
                             <p style="color: green;"><b>Total Question Attempted: {{questionList.length}} </b></p>
                             <p style="color: green;"><b>Total Correct Answered : {{correctAnswer}} </b></p>
                             <p style="color: green;"><b>Total InCorrect Anwered: {{inCorrectAnswer}} </b></p>
@@ -96,7 +96,7 @@
                     <div class="col-md-2">
                         <div class="row d-flex justify-content-between">
                             <img class="img-fluid col-sm-12 mx-auto"
-                                src="https://cdn-icons-png.flaticon.com/512/4658/4658125.png"
+                                src="https://media.istockphoto.com/vectors/credit-score-indicator-set-vector-id880382670?k=6&m=880382670&s=170667a&w=0&h=bfaAm2goCGCvzaEf2XNCK2yClQywkTIoUsCoaHt9-ZY="
                                 width="70" height="70" alt="">
                         </div>
                     </div>
