source code doc added

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,7 +4,7 @@
             <div class="card mt-3 mb-3">
 
                 <div class="card-header bg-light">
-                    <h1 class="display-5  fw-bold " style="color:rgb(0, 98, 211);"> Welcome to Online Test Apllication</h1>
+                    <h1 class="display-5  fw-bold " style="color:rgb(0, 98, 211);"> Welcome to Online Test Application</h1>
                 </div>
 
                 <div class="card-body">
